[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Destination2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/DestinationBlock.png" type="Texture" id=2]
[ext_resource path="res://Scripts/DestinationBlock.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 10 )

[node name="DestinationBlock" type="Node2D"]
script = ExtResource( 3 )

[node name="Platform" type="KinematicBody2D" parent="."]
motion/sync_to_physics = true

[node name="Sprite" type="Sprite" parent="Platform"]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )

[node name="PlatformCollision" type="CollisionShape2D" parent="Platform"]
position = Vector2( 0, -8 )
scale = Vector2( 0.799999, 0.800001 )
shape = SubResource( 1 )

[node name="PlayerDetection" type="Area2D" parent="Platform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/PlayerDetection"]
position = Vector2( 0, -17 )
scale = Vector2( 1, 0.159999 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Destination2D" parent="." instance=ExtResource( 1 )]

[connection signal="body_entered" from="Platform/PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
